update hyper training

--- a/Machine Learning/Hyper Parameter/HP.ipynb
+++ b/Machine Learning/Hyper Parameter/HP.ipynb
@@ -11,6 +11,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code will let you set multiple parameters for each classification model\n",
+    "\n",
+    "It will then run it via the gridsearch from sklearn\n",
+    "\n",
+    "It splits the digits data into multiple train and test using k fold\n",
+    "\n",
+    "It runs them all using the parameters given\n",
+    "\n",
+    "The best ones are stored and appended to the array\n",
+    "\n",
+    "Using the clf functionality, we store it in a pandas df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
